--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -64,13 +64,13 @@ class Basic extends lng.Component {
 
 ### Style Properties
 
-| name                     | type             | description                                                                    |
-| ------------------------ | ---------------- | ------------------------------------------------------------------------------ |
-| backgroundColor          | string           | color of the card                                                              |
-| expandedW                | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
-| expandedH                | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
-| imageSize                | {w, h}           | the desired width and height the image in the card                             |
-| paddingHorizontal        | number           | padding on the x-axis between the right and left of the card and its content   |
-| paddingVertical          | number           | padding on the y-axis between the top and bottom of the card and its content   |
-| radius                   | number \| array  | corner radius of card                                                          |
-| titleTextStyle           | string \| object | style of the title text                                                        |
+| name              | type             | description                                                                    |
+| ----------------- | ---------------- | ------------------------------------------------------------------------------ |
+| backgroundColor   | string           | color of the card                                                              |
+| expandedW         | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
+| expandedH         | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
+| imageSize         | {w, h}           | the desired width and height the image in the card                             |
+| metadata          | string \| object | text style for the metadata                                                    |
+| paddingHorizontal | number           | padding on the x-axis between the right and left of the card and its content   |
+| paddingVertical   | number           | padding on the y-axis between the top and bottom of the card and its content   |
+| radius            | number \| array  | corner radius of card                                                          |
