--- a/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
@@ -75,17 +75,18 @@ Tooltip is only visible on focus of the parent.
 | ------------ | ------ | --------- | ----------------------------------------------------------------------------------------------------- |
 | delayVisible | number | undefined | the amount of time, in milliseconds, before the tooltip is displayed after being focused              |
 | timeVisible  | number | undefined | the amount of time, in milliseconds, the tooltip is displayed before transitioning out of the display |
-| title        | string | undefined | tool tip text goes here                                                                               |
+| title        | string | undefined | text of tooltip content                                                                               |
 
 ### Style Properties
 
-| name            | type             | description                                          |
-| --------------- | ---------------- | ---------------------------------------------------- |
-| backgroundColor | number           | background color of tooltip                          |
-| marginBottom    | number           | space below tooltip                                  |
-| paddingX        | number           | space on left and right sides of tooltip text        |
-| paddingY        | number           | space above and below tooltip text                   |
-| pointerW        | number           | width of point beneath rounded rectangle of tooltip  |
-| pointerH        | number           | height of point beneath rounded rectangle of tooltip |
-| radius          | number \| array  | radius of tooltip corners                            |
-| textStyle       | string \| object | text styles used for Tooltip's text                  |
+| name            | type                             | description                                          |
+| --------------- | -------------------------------- | ---------------------------------------------------- |
+| backgroundColor | number                           | background color of tooltip                          |
+| marginBottom    | number                           | space below tooltip                                  |
+| paddingX        | number                           | space on left and right sides of tooltip text        |
+| paddingY        | number                           | space above and below tooltip text                   |
+| pointerW        | number                           | width of point beneath rounded rectangle of tooltip  |
+| pointerH        | number                           | height of point beneath rounded rectangle of tooltip |
+| radius          | number \| array                  | radius of tooltip corners                            |
+| textStyle       | string \| object                 | text styles used for Tooltip's text                  |
+| transition      | <DocsLink id="lng.Transition" /> | transition to apply to text                          |
