--- a/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
@@ -74,11 +74,12 @@ class Example extends lng.Component {
 
 ### Style Properties
 
-| name         | type    | description                                                                              |
-| ------------ | ------- | ---------------------------------------------------------------------------------------- |
-| fadeW        | number  | Starting point of where fadeShader is applied                                            |
-| offset       | number  | Helps decide whether content should be clipped and where it should be positioned         |
-| shouldSmooth | boolean | Determines whether things like centering should happen immediately or animate into place |
+| name         | type             | description                                                                              |
+| ------------ | ---------------- | ---------------------------------------------------------------------------------------- |
+| fadeW        | number           | Starting point of where fadeShader is applied                                            |
+| offset       | number           | Helps decide whether content should be clipped and where it should be positioned         |
+| shouldSmooth | boolean          | Determines whether things like centering should happen immediately or animate into place |
+| textStyle    | string \| object | text style to apply to the title                                                         |
 
 ### Methods
 
