--- a/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
+++ b/packages/@lightningjs/ui-components/src/components/CardContent/CardContent.mdx
@@ -67,8 +67,8 @@ class Basic extends lng.Component {
 | name              | type             | description                                                                    |
 | ----------------- | ---------------- | ------------------------------------------------------------------------------ |
 | backgroundColor   | string           | color of the card                                                              |
-| expandedW         | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
-| expandedH         | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
+| expandedWidth     | number           | the desired width of the card when in the fully expanded (not collapsed) mode  |
+| expandedHeight    | number           | the desired height of the card when in the fully expanded (not collapsed) mode |
 | imageSize         | {w, h}           | the desired width and height the image in the card                             |
 | metadata          | string \| object | text style for the metadata                                                    |
 | paddingHorizontal | number           | padding on the x-axis between the right and left of the card and its content   |
