fix(Checkbox): update checkW and checkH to checkWidth and checkHeight

--- a/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Checkbox/Checkbox.mdx
@@ -65,9 +65,9 @@ class Example extends lng.Component {
 | backgroundColor        | string | color of Checkbox background when unchecked |
 | backgroundColorChecked | string | color of Checkbox background when checked   |
 | checkColor             | string | color of check icon                         |
-| checkH                 | number | height of check icon                        |
+| checkHeight            | number | height of check icon                        |
 | checkSrc               | string | path the icon to use for the checkmark      |
-| checkW                 | number | width of check icon                         |
+| checkWidth             | number | width of check icon                         |
 | radius                 | number | radius of Checkbox                          |
 | strokeColor            | string | color of the Checkbox border                |
 | strokeWidth            | number | width of Checkbox border                    |
