fix(Key): update iconW and iconH to iconWidth and iconHeight

--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -62,14 +62,14 @@ class Basic extends lng.Component {
 
 ### Style Properties
 
-| name      | type             | description                                                                            |
-| --------- | ---------------- | -------------------------------------------------------------------------------------- |
-| iconW     | number           | width set to all icons                                                                 |
-| iconH     | number           | height set to all icons                                                                |
-| minWidth  | number           | used as a fallback width if no width is passed into the component and `fixed` is false |
-| paddingX  | number           | space between the button horizontal edge and the content                               |
-| sizes     | object           | used to determine the width of key, contains the properties `sm`, `md`, `lg`, `xl`     |
-| textStyle | string \| object | text style to apply to the title                                                       |
+| name       | type             | description                                                                            |
+| ---------- | ---------------- | -------------------------------------------------------------------------------------- |
+| iconWidth  | number           | width set to all icons                                                                 |
+| iconHeight | number           | height set to all icons                                                                |
+| minWidth   | number           | used as a fallback width if no width is passed into the component and `fixed` is false |
+| paddingX   | number           | space between the button horizontal edge and the content                               |
+| sizes      | object           | used to determine the width of key, contains the properties `sm`, `md`, `lg`, `xl`     |
+| textStyle  | string \| object | text style to apply to the title                                                       |
 
 ### Events
 
