fix(Tooltip): update pointerW and pointerH to pointerWidth and pointerHeight

--- a/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Tooltip/Tooltip.mdx
@@ -85,8 +85,8 @@ Tooltip is only visible on focus of the parent.
 | marginBottom    | number                           | space below tooltip                                  |
 | paddingX        | number                           | space on left and right sides of tooltip text        |
 | paddingY        | number                           | space above and below tooltip text                   |
-| pointerW        | number                           | width of point beneath rounded rectangle of tooltip  |
-| pointerH        | number                           | height of point beneath rounded rectangle of tooltip |
+| pointerWidth    | number                           | width of point beneath rounded rectangle of tooltip  |
+| pointerHeight   | number                           | height of point beneath rounded rectangle of tooltip |
 | radius          | number \| array                  | radius of tooltip corners                            |
 | textStyle       | string \| object                 | text styles used for Tooltip's text                  |
 | transition      | <DocsLink id="lng.Transition" /> | transition to apply to text                          |
