fix(Marquee): update fadeW to fadeWidth

--- a/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Marquee/Marquee.mdx
@@ -76,7 +76,7 @@ class Example extends lng.Component {
 
 | name         | type             | description                                                                              |
 | ------------ | ---------------- | ---------------------------------------------------------------------------------------- |
-| fadeW        | number           | Starting point of where fadeShader is applied                                            |
+| fadeWidth    | number           | Starting point of where fadeShader is applied                                            |
 | offset       | number           | Helps decide whether content should be clipped and where it should be positioned         |
 | shouldSmooth | boolean          | Determines whether things like centering should happen immediately or animate into place |
 | textStyle    | string \| object | text style to apply to the title                                                         |
