--- a/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
+++ b/packages/@lightningjs/ui-components/src/docs/Storybook.mdx
@@ -14,11 +14,45 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0\*/}
 
 import { Meta, Markdown } from '@storybook/blocks';
-import StorybookStructure from '../../../../../STORYBOOK.md?raw';
 
 <Meta title="Docs/Storybook Structure" />
 
-<Markdown>{StorybookStructure}</Markdown>
+## LUI Storybook Code Organization
+
+`apps/lightning-ui-docs/.storybook`
+
+| Folder            |          File           | Purpose                                                           |
+| ----------------- | :---------------------: | :---------------------------------------------------------------- |
+| addons            |                         |                                                                   |
+|                   |      constants.js       | constants for addons                                              |
+| addons/components |                         |                                                                   |
+|                   |        index.js         |                                                                   |
+|                   |      NumberRow.js       |                                                                   |
+|                   |        Table.js         |                                                                   |
+|                   |       TableRow.js       |                                                                   |
+| addons/decorators |                         |                                                                   |
+|                   |    withLightning.js     | decorator for Lightning to work in Storybook                      |
+| addons/panels     |                         |                                                                   |
+|                   | ComponentStylesPanel.js | Lightning Custom Component Style Panel                            |
+|                   |   GridOverlayPanel.js   | Lighting Custom Grid Overlay Panel                                |
+|                   |      ThemePanel.js      | Lightning Custom Theme Panel                                      |
+| addons/toolbars   |                         |                                                                   |
+|                   |       Announce.js       | turn on Announce feature                                          |
+|                   |      StageColor.js      | stage color toggle                                                |
+|                   |    ThemeDownload.js     | download a theme                                                  |
+|                   |     ThemePicker.js      | select a theme                                                    |
+| utils             |                         |                                                                   |
+|                   |       helpers.js        | helper functions for Storybook config                             |
+|                   |    registerEvent.js     | event listeners for Storybook config                              |
+|                   |      themeUtils.js      | utility functions for Lightning Theming to work in Storybook      |
+| /                 |                         |                                                                   |
+|                   |        brand.png        | Lightning logo for Storybook theme                                |
+|                   |         main.js         | controls server behavior                                          |
+|                   |    manager-head.html    |                                                                   |
+|                   |        manger.js        | sets Storybook UI options and themes, and registers custom addons |
+|                   |    preview-head.html    |                                                                   |
+|                   |       preview.js        | controls rendering of stories                                     |
+|                   |        theme.js         | theme for Storybook UI                                            |
 
 ### useArgs
 
