--- a/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
+++ b/packages/@lightningjs/ui-components/src/components/Key/Key.mdx
@@ -48,12 +48,12 @@ class Basic extends lng.Component {
 
 ### Properties
 
-| name    | type     | required | default   | description                                                                                                                                                                                                       |
-| ------- | -------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| icon    | string   | false    | null      | url for icon                                                                                                                                                                                                      |
-| onEnter | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key \(see Events section below\) |
-| size    | string   | false    | sm        | width of the Key                                                                                                                                                                                                  |
-| toggle  | boolean  | false    |           | used to toggle `$toggleKeyboard`                                                                                                                                                                                  |
+| name    | type     | required | default   | description                                                                                                                                                                                                     |
+| ------- | -------- | -------- | --------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| icon    | string   | false    | null      | url for icon                                                                                                                                                                                                    |
+| onEnter | function | false    | undefined | if defined, will be invoked when enter is pressed while focused on the `Key` component. When defined, the `$onSoftKey` and `$toggleKeyboard` events will not be emitted from the key (see Events section below) |
+| size    | string   | false    | sm        | width of the Key                                                                                                                                                                                                |
+| toggle  | boolean  | false    | undefined | If true, pressing the key will trigger the $toggleKeyboard event. If false, the key will trigger the $onSoftKey event                                                                                           |
 
 ### Style Properties
 
